rename the examples (avoid spaces in directory names to be more bash friendly)

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,8 +34,9 @@ endif
 
 FEAFLAGS += -D DEVEL
 
-OPTFLAGS = -O0
-# OPTFLAGS = -O2
+OPTFLAGS =
+# OPTFLAGS += -O0
+OPTFLAGS += -O2
 OPTFLAGS += -g -pedantic -Wall -Wno-format-security -Wno-format
 
 
