singlephase examples with wall_speed fail

--- a/src/Makefile
+++ b/src/Makefile
@@ -24,7 +24,7 @@ SRC ?= ./src
 INC =
 
 ERRFLAGS =
-FEAFLAGS =
+FEAFLAGS ?=
 FEAFLAGS += -D_GIT_KEY=$(GITKEY) 
 
 ifdef NO_UNIT_TESTS
@@ -33,6 +33,7 @@ ifdef NO_UNIT_TESTS
 endif
 
 FEAFLAGS += -D DEVEL
+FEAFLAGS += -D TOTAL_TIME=200
 
 OPTFLAGS =
 # OPTFLAGS += -O0
