all examples match, introduce monitoring

--- a/src/Makefile
+++ b/src/Makefile
@@ -38,8 +38,8 @@ FEAFLAGS += -D DEVEL
 OPTFLAGS =
 # OPTFLAGS += -O0
 OPTFLAGS += -O2
-OPTFLAGS += -g -pedantic -Wall -Wno-format-security -Wno-format
-
+OPTFLAGS += -g -pedantic -Wall -Wno-format
+# -Wno-format-security 
 
 EXTFLAGS ?=
 
